--- a/portfolio.html
+++ b/portfolio.html
@@ -19,114 +19,114 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="page-header">
+      <nav class="header-nav list">
+        <a class="logo link" href=./index.html>Web<span class="logo-accent">Studio</span></a>
+        <ul class="header-list  list">
+          <li><a class="link" href="./index.html">Студия</a></li>
+          <li><a class="link current" href="">Портфолио</a></li>
+          <li><a class="link"  href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-contacts list">
+        <li><a class="header-email link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!-- Примеры работ -->
-      <section>
+      <section  class="examples">
         <!-- Фильр -->
-        <h1>Примеры работ</h1>
-        <div>
-          <button type="button">Все</button>
-          <button type="button">Веб-сайты</button>
-          <button type="button">Приложения</button>
-          <button type="button">Дизайн</button>
-          <button type="button">Маркетинг</button>
+        <h1 class="exaples-title visually-hidden" >Примеры работ</h1>
+        <div class="exaples-filter" >
+          <button  class="exaples-filter-btn" type="button">Все</button>
+          <button  class="exaples-filter-btn" type="button">Веб-сайты</button>
+          <button  class="exaples-filter-btn" type="button">Приложения</button>
+          <button  class="exaples-filter-btn" type="button">Дизайн</button>
+          <button  class="exaples-filter-btn" type="button">Маркетинг</button>
         </div>
-        <ul>
-          <li>
-            <a href="">
+        <ul class="exaples-list list" >
+          <li class="exaples-list-item" >
+            <a  class="exaples-link link" href="">
               <img src="./images/project1.jpg" alt="" width="370" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="examples-sec-title" >Технокряк</h2>
+              <p class="examples-text">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="exaples-list-item" >
+            <a class="exaples-link link"  href="">
               <img src="./images/project2.jpg" alt="" width="370" />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="examples-sec-title" >Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
+              <p class="examples-text">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="exaples-list-item" >
+            <a  class="exaples-link link" href="">
               <img src="./images/project3.jpg" alt="" width="370" />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="examples-sec-title" >Ресторан <span lang="en">Seafood</span> </h2>
+              <p class="examples-text">Приложение</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="exaples-list-item" >
+            <a  class="exaples-link link" href="">
               <img src="./images/project4.jpg" alt="" width="370" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="examples-sec-title" >Проект <span lang="en">Prime</span></h2>
+              <p class="examples-text">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="exaples-list-item">
+            <a class="exaples-link link" href="">
               <img src="./images/project5.jpg" alt="" width="370" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="examples-sec-title" >Проект <span lang="en">Boxes</span></h2>
+              <p class="examples-text">Приложение</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="exaples-list-item" >
+            <a class="exaples-link link" href="">
               <img src="./images/project6.jpg" alt="" width="370" />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="examples-sec-title" lang="en">Inspiration has no Borders</h2>
+              <p class="examples-text">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="exaples-list-item">
+            <a  class="exaples-link link" href="">
               <img src="./images/project7.jpg" alt="" width="370" />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="examples-sec-title" >Издание <span lang="en">Limited Edition</span></h2>
+              <p class="examples-text">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="exaples-list-item">
+            <a class="exaples-link link" href="">
               <img src="./images/project8.jpg" alt="" width="370" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="examples-sec-title" >Проект <span lang="en">LAB</span></h2>
+              <p class="examples-text">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="exaples-list-item" >
+            <a  class="exaples-link link" href="">
               <img src="./images/project9.jpg" alt="" width="370" />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="examples-sec-title" lang="en">Growing Business</h2>
+              <p class="examples-text">Приложение</p>
             </a>
           </li>
         </ul>
       </section>
       <!--  Футер -->
     </main>
-    <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+     <footer class="page-footer">
+      <a class="link logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
       <address>
-        <ul>
+        <ul class="footer-contacts list">
           <li>
-            <a
+            <a class="footer-adress link"
               href=" https://goo.gl/maps/PGf1aji3u7h2vcn76"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li><a class="footer-email link" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="footer-tel link" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
