--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main>
       <!-- HERO -->
       <div>
-        <section>
+        <section class="hero">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-btn" type="button">Заказать услугу</button>
         </section>
